--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <ul class="sidebar">
           <li><a href="#" onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
           <li><a href="#">Home</a></li>
-          <li><a href="#shop-section">Shop</a></li>
+          <li><a href="shop.html">Shop</a></li>
           <li><a href="#pages-section">Pages</a></li>
           <li><a href="#contact-section">Contact</a></li>
         </ul>
         <ul>
           <li><a href="#"><img src="images/gmart-logo.png" alt="logo"></a></li>
           <li class="hideOnMobile"><a href="#">Home</a></li>
-          <li class="hideOnMobile"><a href="#shop-section">Shop</a></li>
+          <li class="hideOnMobile"><a href="shop.html">Shop</a></li>
           <li class="hideOnMobile"><a href="#pages-section">Pages</a></li>
           <li class="hideOnMobile"><a href="#contact-section">Contact</a></li>
           <li class="menuButton"><a href="#" onclick="showSidebar()"><i class="fa-solid fa-bars"></i></a></li>
@@ -36,7 +36,7 @@
     <section>
       <div class="background-container">
         <img class="background-image" src="images/lays.jpeg" alt="">
-        <button class="shop-now-btn">Shop Now</button>
+        <a class="shop-now-btn" href="shop.html">Shop Now</a>
       </div>
     </section>
     <section>
