--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <header>
       <nav>
         <ul class="sidebar">
-          <li><a href="#" onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
-          <li><a href="#">Home</a></li>
+          <li><a onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="#pages-section">Pages</a></li>
-          <li><a href="#contact-section">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul>
           <li><a href="#"><img src="images/gmart-logo.png" alt="logo"></a></li>
-          <li class="hideOnMobile"><a href="#">Home</a></li>
+          <li class="hideOnMobile"><a href="index.html">Home</a></li>
           <li class="hideOnMobile"><a href="shop.html">Shop</a></li>
           <li class="hideOnMobile"><a href="#pages-section">Pages</a></li>
-          <li class="hideOnMobile"><a href="#contact-section">Contact</a></li>
-          <li class="menuButton"><a href="#" onclick="showSidebar()"><i class="fa-solid fa-bars"></i></a></li>
+          <li class="hideOnMobile"><a href="contact.html">Contact</a></li>
+          <li class="menuButton"><a onclick="showSidebar()"><i class="fa-solid fa-bars"></i></a></li>
         </ul>
       </nav>
     </header>
