--- a/shop.html
+++ b/shop.html
@@ -12,25 +12,28 @@
 </head>
 <body>
   <header>
-    <header>
-      <nav>
-        <ul class="sidebar">
-          <li><a onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="#pages-section">Pages</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <ul>
-          <li><a href="#"><img src="images/gmart-logo.png" alt="logo"></a></li>
-          <li class="hideOnMobile"><a href="index.html">Home</a></li>
-          <li class="hideOnMobile"><a href="shop.html">Shop</a></li>
-          <li class="hideOnMobile"><a href="#pages-section">Pages</a></li>
-          <li class="hideOnMobile"><a href="contact.html">Contact</a></li>
-          <li class="menuButton"><a onclick="showSidebar()"><i class="fa-solid fa-bars"></i></a></li>
-        </ul>
-      </nav>
-    </header>
+    <nav>
+      <ul class="sidebar">
+        <li><a onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#pages-section">Pages</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <ul>
+        <li><a href="index.html"><img src="images/gmart-logo.png" alt="logo"></a></li>
+        <li class="hideOnMobile"><a href="index.html">Home</a></li>
+        <li class="hideOnMobile"><a href="#">Shop</a></li>
+        <li class="hideOnMobile"><a href="#pages-section">Pages</a>
+          <ul>
+            <li class="hideOnMobile"><a href="shopping-cart.html">Shopping Cart</a></li>
+            <li class="hideOnMobile"><a href="checkout.html">Checkout</a></li>
+          </ul>
+        </li>
+        <li class="hideOnMobile"><a href="contact.html">Contact</a></li>
+        <li class="menuButton"><a onclick="showSidebar()"><i class="fa-solid fa-bars"></i></a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <section class="header-section">
@@ -218,8 +221,6 @@
     <div class="footer-container">
       <div>&#169; <span>GMART21</span>. Designed by Christian</div>
     </div>
-  </footer>
-  <footer>
   </footer>
   <script src="scripts/index.js"></script>
 </body>
