--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <li><a onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
-        <li><a>Pages</a></li>
+        <li><a href="shopping-cart.html">Cart</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
       <ul>
