--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
         <li><a href="#">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
-        <li><a>Pages</a></li>
+        <li><a href="shopping-cart.html">Cart</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul>
