--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
         <li><a onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Shop</a></li>
-        <li><a href="#pages-section">Pages</a></li>
+        <li><a href="shopping-cart.html">Cart</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul>
