--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -17,7 +17,7 @@
         <li><a onclick="closeSidebar()"><i class="fa-solid fa-xmark"></i></a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
-        <li><a>Pages</a></li>
+        <li><a href="shopping-cart.html">Cart</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul>
@@ -143,17 +143,17 @@
               <div>Total</div>
               <div>&#8369;312.75</div>
             </div>
-            <button>Proceed To Checkout</button>
+            <button onclick="location.href='checkout.html'" type="button">Proceed To Checkout</button>
           </div>
         </div>
       </div>
     </section>
-    <script src="scripts/index.js"></script>
   </main>
   <footer>
     <div class="footer-container">
       <div>&#169; <span>GMART21</span>. Designed by Christian</div>
     </div>
   </footer>
+  <script src="scripts/index.js"></script>
 </body>
 </html>
